# rust-y-code

./: Cargo.toml  Dockerfile  k8.yaml
cli/: Cargo.toml
cli/src/: lib.rs
collections/: Cargo.toml
collections/src/: lib.rs  main.rs
db/: .env  Cargo.toml
db/migrations/2021-07-26-201051_create_company/: down.sql  up.sql
db/migrations/2021-07-26-210344_create_person/: down.sql  up.sql
db/src/: lib.rs  models.rs  schema.rs
db/src/src/: models.rs
http/: Cargo.toml
http/src/: lib.rs
macros/: Cargo.toml
macros/src/: lib.rs
primer/: Cargo.toml
primer/src/: main.rs
tasks/: Cargo.toml
tasks/src/: lib.rs
tasks/task_macro/: Cargo.toml
tasks/task_macro/src/: lib.rs
