[package]
name = "tasks"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
task_macro = { path = "./task_macro" }
mysql = "21.0.1"
clap = "3.0.0-beta.2"
rayon = "1.5"